--- a/test/build.gradle
+++ b/test/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion '23.0.2'
 
     defaultConfig {
         applicationId "pl.zielony.fragmentmanager.test"
@@ -27,5 +27,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile project(':lib')
-    compile 'tk.zielony:carbon:0.11.0'
+    compile 'com.github.ZieIony:Carbon:20d0f50753'
 }
