--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.android.support:appcompat-v7:24.2.0'
     compile project(':animator')
+    compile project(':statemachine')
 }
